# chess-engine

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  README.ru.md  README.uk.md  conanfile.py  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml  test.yml
Testing/Temporary/: CTestCostData.txt
ports/chess-engine/: portfile.cmake  vcpkg.json
src/: chessEngine.hpp  chessEngine.ts  index.ts  main.cpp
tests/: tests.cpp
